--- a/package.json
+++ b/package.json
@@ -1214,6 +1214,7 @@
     "which": "^2.0.2"
   },
   "dependencies": {
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "why": "^0.6.2"
   }
 }
